Fix layout bug

--- a/task_03/layouts.css
+++ b/task_03/layouts.css
@@ -1,16 +1,22 @@
 .main-container {
   display: flex;
   background-color: #eeeeee;
+  height: 100vh;
 }
 
 .game {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  text-align: center;
   width: 70vw;
   margin: auto;
   padding: 1rem;
+  max-height: 100vh;
+  box-sizing: border-box;
+  overflow: auto;
+  width: 70vw;
+}
+
+.game > * {
+  margin: auto;
 }
 
 .board {
